--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <style>
+            *, ::before, ::after {
+              padding: 0;
+              margin: 0;
+              box-sizing: border-box; 
+            }
             #container {
                 margin: auto;
                 max-width: 968px;
@@ -20,6 +25,13 @@
                 color: blueviolet;
                 text-align: center
             }
+            h4 {
+                font-family: Poppins;
+                font-weight: 400;
+                font-size: 1.25rem;
+                text-shadow: 1px 1px 1px #ddd;
+                padding: 4px;
+            }
             #hero {
                 width: 100%;
                 height: 420px;
@@ -30,11 +42,44 @@
                 font-weight: 400;
                 color: grey;
                 text-align: justify;
+                margin: 4px;
             }
-            .para-jobs {
-                font-family: Montserrat;
-                font-weight: 600;
+            .column-1 {
+                float: left;
+                width: 66.66%;
+                height: 120px
+            }
+            .column-2 {
+                float: left;
+                width: 33.33%;
+                height: 120px;
+                text-align: right;
+            }
+            .salary {
+                font-family: Poppins;
+                font-weight: 200;
+                font-size: 1rem;
+                font-style: italic;
                 color: darkblue;
+                padding: 2px;
+            }
+            .location {
+                font-family: Poppins;
+                font-weight: 200;
+                padding: 2px;
+            }
+            hr {
+                margin-bottom: 8px;
+            }
+            .apply-btn {
+                background-color: blue;
+                color: white;
+                border-radius: 5px;
+                padding: 8px;
+                width: 100px;
+                height: 32px;
+                margin-top: 40px;
+                margin-bottom: 8px;
             }
             .btn-container {
                 text-align: center;
@@ -51,10 +96,13 @@
         </style>
         <title>Job Portal - FLASK PROJECT</title>
         <link rel="icon" type="image/x-icon" href="/static/img/favicon.png">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     </head>
     <body>
     <div id="container">
-        <h1>IT Jobs in Kochi Portal</h1>
+        <h1>{{company_name}} Portal</h1>
         <img id="hero" src="/static/img/banner.webp">
         <h2>About Jakob's</h2>
         <p>When you run the file hello_world.py, the ending .py indicates that the
@@ -70,7 +118,16 @@
             different color. This feature is called syntax highlighting and is quite useful
             as you start to write your own programs.</p>
         <h2>Job Opening's</h2>
-        <p class="para-jobs">PENDING WORK -  Add job openings here</p>
+        <div class="row">
+    
+            <div>
+                {% for job in jobs %}
+                    {% include "joblisting.html" %}
+                {% endfor %}
+            </div>
+            
+        </div>
+        
         <div class="container btn-container">
             <button class="primary-btn">Contact Us</button>
         </div>
