Connected to database using psycopg2, used function to connect, used secret key to store the connection string

--- a/templates/joblisting.html
+++ b/templates/joblisting.html
@@ -5,7 +5,7 @@
             {% if 'salary' in job %}
             <div>
                 <p class="salary">
-                        Salary: Rs.{{job['salary']}} per month.
+                        Salary: Rs.{{job['salary']}}/- per month.
                 </p>
             </div>
             {% else %}
