--- a/templates/home.html
+++ b/templates/home.html
@@ -1,81 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
-            *, ::before, ::after {
-              padding: 0;
-              margin: 0;
-              box-sizing: border-box; 
-            }
-            h1 {
-                font-size: 2.5rem;
-                font-family: Roboto;
-                margin: 8px;
-                text-align: center
-            }
-            h2 {
-                font-family: Roboto;
-                font-size: 2rem;
-                text-align: center;
-                margin: 12px
-            }
-            h4 {
-                font-family: Poppins;
-                font-weight: 400;
-                font-size: 1.25rem;
-                text-shadow: 1px 1px 1px #ddd;
-                padding: 4px;
-            }
-            #hero {
-                width: 100%;
-                height: 26.25em;
-                object-fit: cover;
-            }
-            .lead {
-                text-align: justify;
-                /* margin: 4px; */
-            }
-            .salary {
-                font-family: Poppins;
-                font-weight: 200;
-                font-size: 1rem;
-                font-style: italic;
-                color: darkblue;
-                padding: 2px;
-            }
-            .location {
-                font-family: Poppins;
-                font-weight: 200;
-                padding: 2px;
-            }
-            hr {
-                margin-bottom: 8px;
-            }
-            .btn-container {
-                text-align: center;
-            }
-            .primary-btn {
-                background-color: indianred;
-                color: white;
-                padding: 10px 20px;
-                border-radius: 5px;
-                text-decoration: none;
-                font-family: Roboto;
-                font-weight: 400;
-            }
-        </style>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Job Portal - FLASK PROJECT</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="icon" type="image/x-icon" href="/static/img/favicon.png">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        {% include 'bootstrap.html' %}
     </head>
     <body>
     {% include 'navmenu.html' %}
-    <img id="hero" class="img-fluid" src="/static/img/banner.webp">
+    <img id="hero" class="img-fluid" src="/static/img/banner.webp" loading="lazy">
     <div class="container">
         <h1>{{company_name}} Portal</h1>
         <h2>About Jakob's</h2
@@ -97,7 +28,7 @@
                     as you start to write your own programs.</p>
                 </div>
                 <div class="col">
-                    <img src="/static/img/recruitment.png" class="rounded img-fluid" style="height: 400px">
+                    <img src="/static/img/recruitment.png" class="rounded img-fluid" style="height: 400px" loading="lazy">
                 </div>
             </div>
         </div>
